--- a/index1.css
+++ b/index1.css
@@ -4,8 +4,7 @@
     /* box-sizing: border-box; */
  }
 body{
-    width: 100%;
-    height: 100%;
+    display:block;
     background-image: url("anh1.jpg");
     background-repeat:no-repeat;
     border-radius: 20px;
